コードレビューに基づいて修正しました「１」